# monorepo

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE.md  Makefile  README.md  mcp.json  package.json  pnpm-lock.yaml  pubspec.yaml  turbo.json
.claude/: settings.json
.claude/commands/: ready-to-review-mergeable.md
.claude/hooks/: pre-linear-save-issue-hygiene.sh  stop-prs-green.sh
.github/workflows/: deploy-docs.yml
apps/mobile/: package.json
apps/raspberry/: .dockerignore  .gitignore  Dockerfile.template  LICENSE.md  MANIFESTO.md  README.md  create_project_structure.ps1  create_tests.ps1  docker-compose.yml  package.json  repo_setup.ps1  repo_setup.sh  requirements.txt  start.sh
apps/vertivo_client/: README.md  package.json  pubspec.yaml
business/: .gitignore
docs/: STRUCTURE.md  SYMLINKS_SETUP.md  mkdocs.yml  requirements.txt
linear-todo-templates/: SUMMARY.md  step-01.md  step-02.md  step-03.md  step-04.md  step-05.md  step-06.md  step-07.md
openspec/: README.md
skills/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  MCP_SETUP.md  README.md  gemini-extension.json
skills/system-reliability-engineering/observability-stack/scripts/rust/: Cargo.toml
skills/system-reliability-engineering/observability-stack/scripts/rust/src/: lib.rs  main.rs  telemetry.rs
skills/system-reliability-engineering/observability-stack/scripts/rust/src/services/: user_service.rs
srd/: SRD.md  business-model-canvas.md  claude-directive.yml  gap-audit.md  journeys.md  personas.yml  success-reality.md
style-dictionary/: tokens.json
(+602 files in other folders)
